Move non-java resources into src/main/resources